# FastAPI

fastapi_project/: README.md  all.py  docker-compose.yml  main.py  pyproject.toml  test.http
fastapi_project/configurations/: database.py
fastapi_project/models/: models.py
fastapi_project/postgres_data/: postmaster.pid
fastapi_project/postgres_data/base/1/: 2619  2696  2840  2841
fastapi_project/postgres_data/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2224  2224_vm  2579  2604  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+18 more)
fastapi_project/postgres_data/base/49448/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  174  (+232 more)
fastapi_project/postgres_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
fastapi_project/postgres_data/pg_xact/: 0000
fastapi_project/routers/: __init__.py
fastapi_project/routers/v1/: books.py  sellers.py
fastapi_project/schemas/: books.py  sellers.py
fastapi_project/src/: main.py  pytest.ini
fastapi_project/src/configurations/: database.py  settings.py
fastapi_project/src/routers/: __init__.py
fastapi_project/src/schemas/: __init__.py  sellers.py
fastapi_project/src/tests/: conftest.py  test_book_whith_pt.py  test_books.py  test_seller_whith_pt.py
fastapi_project/tests/: test_book_whith_pt.py  test_books.py
(+2 files in other folders)
