[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["ElenaRuchkova <elena_ruchkova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
icecream = "^2.1.3"
orjson = "^3.9.12"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
